# codeeval

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
0-easy/: Makefile
0-easy/age-distribution/: main.cpp  main.py
0-easy/armstrong-numbers/: ArmstrongNumbers.java  Main.java  main.cpp
0-easy/beautiful-strings/: BeautifulStrings.java  Main.java
0-easy/big-digits/: input.txt  main.py
0-easy/bit-positions/: BitPositions.java  Main.java
0-easy/black-card/: input-large.txt  input-small.txt  main.py
0-easy/calculate-distance/: CalculateDistance.java  Main.java
0-easy/capitalize-words/: CapitalizeWords.java  Main.java  input.txt
0-easy/chardonnay-or-cabernet/: input-large.txt  input-small.txt  main.py
0-easy/clean-up-the-words/: input-large.txt  input.txt  main.py
0-easy/compare-points/: input.txt  main.py
0-easy/compressed-sequence/: CompressedSequence.java  Main.java
0-easy/data-recovery/: main.py
0-easy/delta-time/: main.py
0-easy/details/: input-large.txt  input-small.txt  main.py
0-easy/even-numbers/: EvenNumbers.java  Main.java  main.cpp
0-easy/fibonacci-series/: FibonacciSeries.java  Main.java  main.py
0-easy/file-size/: FileSize.java  Main.java  input.txt  main.cpp
0-easy/find-a-writer/: FindAWriter.java  Main.java
0-easy/find-the-highest-score/: input.txt  main.py
0-easy/fizz-buzz/: FizzBuzz.java  Main.java
0-easy/football/: input.txt  main.py
0-easy/happy-numbers/: HappyNumbers.java  Main.java  main.cpp
0-easy/hex-to-decimal/: HexToDecimal.java  Main.java  input.txt  main.cpp  main.py
0-easy/hidden-digits/: HiddenDigits.java  Main.java
0-easy/json-menu-ids/: JsonMenuIds.java  Main.java  input.txt
0-easy/juggling-with-zeros/: main.py
0-easy/knight-moves/: input.txt  main.py
0-easy/lettercase-percentage-ratio/: main.py
0-easy/longest-word/: LongestWord.java  Main.java
0-easy/lowercase/: Lowercase.java  Main.java  main.cpp
0-easy/lowest-unique-number/: LowestUniqueNumber.java  Main.java
0-easy/matrix-rotation/: main.py
0-easy/max-range-sum/: input.txt  main.py
0-easy/mersenne-prime/: Makefile  input.txt  main.cpp  main.py
0-easy/minimum-distance/: input.txt  main.py
0-easy/mixed-content/: Main.java  MixedContent.java
0-easy/morse-code/: Main.java  MorseCode.java
0-easy/multiples-of-a-number/: Main.java  MultiplesOfANumber.java
0-easy/multiplication-tables/: Main.java  MultiplicationTables.java  main.cpp
0-easy/multiply-lists/: Main.java  MultiplyLists.java  main.cpp
0-easy/n-mod-m/: Main.java  NModM.java
0-easy/nice-angles/: input-large.txt  main.py
0-easy/not-so-clever/: input.txt  main.go  main.py
0-easy/odd-numbers/: Main.java  OddNumbers.java  main.cpp
0-easy/one-zero-two-zeros/: input.txt  main.py
0-easy/penultimate-word/: Main.java  PenultimateWord.java  input.txt
0-easy/prime-palindrome/: Main.java  (+1 more)
2-hard/: Makefile
(+543 files in other folders)
